# kontsuba

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  pyproject.toml  setup.py  test.py
dependencies/: CMakeLists.txt
dependencies/tinyply/: CMakeLists.txt
dependencies/tinyxml2/: CMakeLists.txt
kontsuba/: CMakeLists.txt
kontsuba/app/: exporter.cpp  exporter.h  kontsuba.cpp
kontsuba/bindings/: bindings.cpp
kontsuba/bindings/kontsuba/: __init__.py
kontsuba/core/: converter.cpp  principled_brdf.h  utils.h
kontsuba/core/include/kontsuba/: converter.h
test_models/: normalTest.blend  normalTest.blend1  normalTest.gltf
